--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+cheese-the-duck (1.5.6-1) unstable; urgency=medium
+
+  * Comprehensive bug audit and fixes
+  * Fixed memory system crashes
+  * Fixed statistics data persistence
+  * Fixed audio system methods
+  * Fixed building system methods
+  * Improved dialogue system
+  * Added complete stage mappings
+  * Fixed singleton patterns
+  * Better error handling throughout
+
+ -- Cheese the Duck Team <cheese@example.com>  Fri, 24 Jan 2026 21:00:00 +0000
+
 cheese-the-duck (1.2.0-1) unstable; urgency=medium
 
   * Chat color coding system
